@@ -115,6 +115,7 @@
 - Fix: [#5003] Able to remove entrance/exit of unedittable rides (such as in Volcania).
 - Fix: [#5096] Failure to open parks with out of bounds sprite coordinates.
 - Fix: [#5114] Some entertainer costumes never select-able.
+- Fix: [#5381] Game crashes in scenario editor when scenery or pathing is clicked on when no objects loaded.
 
 0.0.5 (2016-12-27)
 ------------------------------------------------------------------------
